# internal/docs/swagger.yaml
@@ -319,68 +319,6 @@ paths:
       summary: API Apply Cashback
       tags:
       - Client Cashback APIs
-  /v1/cashbacks/{trxId}:
-    post:
-      consumes:
-      - application/json
-      description: API to view detail of applied cashback based on the given Kezbek
-        transaction reference
-      parameters:
-      - default: Bearer
-        description: Your Token to Access
-        in: header
-        name: Authorization
-        type: string
-      - description: Client Channel
-        enum:
-        - EBIZKEZBEK
-        - B2BCLIENT
-        in: header
-        name: x-client-channel
-        required: true
-        type: string
-      - default: android 10
-        description: Client OS or Browser Agent
-        in: header
-        name: x-client-os
-        required: true
-        type: string
-      - description: Client Device ID
-        in: header
-        name: x-client-device
-        required: true
-        type: string
-      - default: 1.0.0
-        description: Client Platform Version
-        in: header
-        name: x-client-version
-        required: true
-        type: string
-      - description: Client Original Timestamp in UNIX format (EPOCH)
-        in: header
-        name: x-client-timestamp
-        type: string
-      - description: Kezbek Transaction Reference
-        in: path
-        name: trxId
-        required: true
-        type: string
-      responses:
-        "200":
-          description: OK
-        "400":
-          description: Bad Request
-        "401":
-          description: Unauthorized
-        "403":
-          description: Forbidden
-        "500":
-          description: Internal Server Error
-        "503":
-          description: Service Unavailable
-      summary: API Detail Applied Cashback
-      tags:
-      - Client Cashback APIs
   /v1/partners:
     post:
       consumes:
